change protocol and TTL
